const category = {
  construction: require("../../assets/card-images/construction.jpg"),
  mason: require("../../assets/card-images/construction.jpg"),
  electrical: require("../../assets/card-images/electrical.jpg"),
  electrician: require("../../assets/card-images/electrical.jpg"),
  farm: require("../../assets/card-images/farm.jpg"),
  farming: require("../../assets/card-images/farm.jpg"),
  "farm work": require("../../assets/card-images/farm.jpg"),
  cleaning: require("../../assets/card-images/cleaning.jpg"),
  driver: require("../../assets/card-images/transport.jpg"),
  transport: require("../../assets/card-images/transport.jpg"),
  welding: require("../../assets/card-images/mechanical.jpg"),
  mechanical: require("../../assets/card-images/mechanical.jpg"),
  plumbing: require("../../assets/card-images/plumbing.jpg"),
  plumber: require("../../assets/card-images/plumbing.jpg"),
  carpentry: require("../../assets/card-images/carpentry.jpg"),
  carpenter: require("../../assets/card-images/carpentry.jpg"),
  painting: require("../../assets/card-images/painting.jpg"),
  painter: require("../../assets/card-images/painting.jpg"),
  cooking: require("../../assets/card-images/cooking.jpg"),
  cook: require("../../assets/card-images/cooking.jpg"),
...
